--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -181,6 +181,18 @@ a:hover {
     padding-left: 26px;
 }
 
+#main-menu li a.gantt,
+#main-menu li a.gantt:hover {
+    background: url(../images/fugue/calendar-blue.png) 6px center no-repeat;
+    padding-left: 26px;
+}
+
+#main-menu li a.calendar,
+#main-menu li a.calendar:hover {
+    background: url(../images/fugue/calendar.png) 6px center no-repeat;
+    padding-left: 26px;
+}
+
 #main-menu li a.news,
 #main-menu li a.news:hover {
     background: url(../images/fugue/newspaper.png) 6px center no-repeat;
