--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -466,6 +466,11 @@ h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 {
     font-weight: normal;
 }
 
+#sidebar a.selected {
+    background-color: none;
+    text-decoration: underline !important;
+}
+
 /*
 * Generic Tables
 */
