--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -467,7 +467,7 @@ h2, h3, h4, .wiki h1, .wiki h2, .wiki h3 {
 }
 
 #sidebar a.selected {
-    background-color: none !important;
+    background-color: transparent !important;
     text-decoration: underline !important;
 }
 
