--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -591,7 +591,7 @@ p.pourcent {
 * Issues
 */
 table.list.issues .done_ratio {
-    padding: 0 !important;
+    padding: 2px 5px 2px 5px !important;
 }
 
 table.list.issues .done_ratio table.progress {
